Colores anteriores de la pagina

--- a/index-1.html
+++ b/index-1.html
@@ -41,7 +41,7 @@
                 </li>
                 <li><a href="index-3.html">Productos</a>
                 </li>
-                <li><a href="index-4.html">Ubicación</a>
+                <li><a href="index-4.html">Contacto</a>
                 </li>
               </ul>
             </nav>
@@ -52,94 +52,58 @@
         <section class="well center bg-color">
           <div class="container">
             <h2>¿Quiénes Somos?</h2><img src="images/page-2_img01.jpg" alt="">
-            <h5>Cum sociis natoque penatibus et magnis dis parturient montes</h5>
-            <p class="txt1">Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend, elit. Aenean auctor wisi et urna. Aliquam erat volutpat. Duis ac turpis. Integer rutrum ante eu lacus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem.</p>
+            <h5>Nosotros</h5>
+            <p class="txt1">Maquinaria J.McPRIS Es una empresa dedicada a apoyar al sector productivo y de servicios en México.
+              Ofrecemos grúas y camiones usados en excelentes condiciones con sistema hidráulico, utilizados en la elevación y manipulación de cargas, distribuyéndolos en empresas enfocadas al  transporte, obras públicas, construcción, permitiendo simplificar el trabajo.
+              Ponemos a su disposición grúas articuladas sueltas de todas las capacidades en marcas líderes mundiales como  Hiab, Fassi, HMF, National, Palfinger, Copma, IMT, Tirre y Cormach; para que sean colocadas sobre su camión, si así lo desea, dentro de nuestras instalaciones.
+            </p>
           </div>
         </section>
         <section class="well center">
           <div class="container">
-            <h2>Our mission & values</h2>
             <ul class="row product-list">
-              <li class="grid_3">
+              <li class="grid_6">
                 <div class="icon2 fa-user"></div>
-                <h5>Aenean auctor wisi et</h5>
-                <p>Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient.</p><a href="#" class="btn">Read more</a>
+                <h5>Visión</h5>
+                <p align="justify">brindar soluciones especializadas y confiables en el manejo y traslado de maquinaria pesada, montajes, etc.  de acuerdo a los requerimientos y necesidades especificas de cada cliente, afirmando la solidez y prestigio de la empresa en su liderazgo profesional y su responsabilidad social.</p>
               </li>
-              <li class="grid_3">
+              <li class="grid_6">
                 <div class="icon2 fa-wrench"></div>
-                <h5>Donec sit amet eros</h5>
-                <p>Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis partur ient montes, nascetur ridiculus.</p><a href="#" class="btn">Read more</a>
-              </li>
-              <li class="grid_3">
-                <div class="icon2 fa-star-half-empty"></div>
-                <h5>Praesent vestibulum</h5>
-                <p>Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec accumsan malesuada orci. Donec sit amet.</p><a href="#" class="btn">Read more</a>
-              </li>
-              <li class="grid_3">
-                <div class="icon2 fa-lock"></div>
-                <h5>Integer rutrum ante</h5>
-                <p>Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec accmsan malesuada orci. Donec sit ame.</p><a href="#" class="btn">Read more</a>
+                <h5>Misión</h5>
+                <p align="justify">
+                  Todas nuestras grúas son revisados por especialistas dentro denuestro taller, en donde pasan un proceso de mantenimiento y pruebas  para finalmente podérlas entregar en las mejores condiciones.
+                  <br>Contamos con camiones, grúas articuladas y telescópicas ya instaladas, con los tramites necesarios para facilitar la compra de nuestras unidades.
+                </p>
               </li>
             </ul>
           </div>
         </section>
         <section data-mobile="true" class="well3 center parallax" style="background-image: url(images/parallax2.jpg);">
           <div class="container">
-            <h2>Years of experience in quarrying</h2>
-            <h6>Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing</h6>
-            <p class="txt1">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna<br/> aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Read More</a>
-          </div>
-        </section>
-        <section class="well bg-color">
-          <div class="container">
-            <h2 class="center">Our capabilities</h2>
-            <ul class="row product-list2">
-              <li class="grid_4">
-                <figure class="figure"><img src="images/page-2_img02.jpg" alt="">
-                  <figcaption data-equal-group="1">
-                    <h6><a href="#">Aenean auctor wisi et urna</a></h6>
-                    <p class="txt1">Donec accumsan malesuada orci. Donec amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris fermentum dictu</p>
-                  </figcaption>
-                </figure>
-              </li>
-              <li class="grid_4">
-                <figure class="figure"><img src="images/page-2_img03.jpg" alt="">
-                  <figcaption data-equal-group="1">
-                    <h6><a href="#">Praesent vestibulum molest</a></h6>
-                    <p class="txt1">Donec sit amet eros. Lorem ipsum dolor amet, consectetuer adipiscing elit. Mauris fermentum dictum magna. Sed laoreet aliquam leo</p>
-                  </figcaption>
-                </figure>
-              </li>
-              <li class="grid_4">
-                <figure class="figure"><img src="images/page-2_img04.jpg" alt="">
-                  <figcaption data-equal-group="1">
-                    <h6><a href="#">Cum sociis natoque penatibusmagni</a></h6>
-                    <p class="txt1">Aenean auctor wisi et urna. Aliquam erat volutpat. Duis ac turpis. Integer rutrum ante eu lacus. Lorem ipsum dolor sit amet, consectetu</p>
-                  </figcaption>
-                </figure>
-              </li>
-            </ul>
+            <h2>Nuestra Experiencia</h2>
+            <h6>Contamos con más de 20 años de experiencia atendiendo las necesidades de grúas para proyectos de obra civil, industria petroquímica, eólica e infraestructura privada, por lo que todos nuestros equipos son fabricados con la mejor tecnología para carga y descarga de maquinaria o estructuras.</h6>
+
           </div>
         </section>
         <section class="well center">
           <div class="container">
-            <h2>Company history</h2>
+            <h2>Nuestra Historia</h2>
             <div class="row">
               <article class="grid_3"><span>1998-2002</span>
                 <h5>Aenean auctor wisi et</h5>
-                <p class="txt1">Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient.</p><a href="#" class="btn">Read more</a>
+                <p class="txt1">Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient.</p>
               </article>
               <article class="grid_3"><span>2004-2006</span>
                 <h5>Aenean auctor wisi et</h5>
-                <p class="txt1">Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient.</p><a href="#" class="btn">Read more</a>
+                <p class="txt1">Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient.</p>
               </article>
               <article class="grid_3"><span>2007-2010</span>
                 <h5>Aenean auctor wisi et</h5>
-                <p class="txt1">Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient.</p><a href="#" class="btn">Read more</a>
+                <p class="txt1">Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient.</p>
               </article>
               <article class="grid_3"><span>2011-2015</span>
                 <h5>Aenean auctor wisi et</h5>
-                <p class="txt1">Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient.</p><a href="#" class="btn">Read more</a>
+                <p class="txt1">Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient.</p>
               </article>
             </div>
           </div>
@@ -196,7 +160,7 @@
                 <ul>
                   <li><a href="#" class="fa-google-plus"><span>Google+</span></a></li>
                   <li><a href="#" class="fa-twitter"><span>Twitter</span></a></li>
-                  <li><a href="#" class="fa-facebook"><span>Facebook</span></a></li>
+                  <li><a href="https://www.facebook.com/maquinaria.jmcpris/" class="fa-facebook"><span>Facebook</span></a></li>
                 </ul>
               </div>
               <div class="grid_3">
