--- a/index-2.html
+++ b/index-2.html
@@ -41,7 +41,7 @@
                 </li>
                 <li><a href="index-3.html">Productos</a>
                 </li>
-                <li><a href="index-4.html">Ubicación</a>
+                <li><a href="index-4.html">Contacto</a>
                 </li>
               </ul>
             </nav>
@@ -53,28 +53,16 @@
           <div class="container">
             <h2>Servicios</h2>
             <div class="row">
-              <figure class="grid_3 figure2"><img src="images/page-3_img01.jpg" alt="">
+              <figure class="grid_6 figure2"><img src="images/page-3_img01.jpg" alt="">
                 <figcaption>
-                  <h5 data-equal-group="1">Donec sit amet eros</h5><br>
-                  <p class="txt1">Fusce feugiat malesuada odio. Morbi nunc odio, gravida at cursus lorem. Maecenas tristique.</p><a href="#" class="btn">Read more</a>
+                  <h5 data-equal-group="1">RENTA DE GRÚA</h5><br>
+                  <p class="txt1">Fusce feugiat malesuada odio. Morbi nunc odio, gravida at cursus lorem. Maecenas tristique.</p>
                 </figcaption>
               </figure>
-              <figure class="grid_3 figure2"><img src="images/page-3_img02.jpg" alt="">
+              <figure class="grid_6 figure2"><img src="images/page-3_img02.jpg" alt="">
                 <figcaption>
-                  <h5 data-equal-group="1">Duis ultricies</h5><br>
-                  <p class="txt1">Fusce feugiat malesuada odio. Morbi nunc odio, gravida at cursus lorem. Maecenas tristique.</p><a href="#" class="btn">Read more</a>
-                </figcaption>
-              </figure>
-              <figure class="grid_3 figure2"><img src="images/page-3_img03.jpg" alt="">
-                <figcaption>
-                  <h5 data-equal-group="1">Lorem ipsum dol</h5><br>
-                  <p class="txt1">Fusce feugiat malesuada odio. Morbi nunc odio, gravida at cursus lorem. Maecenas tristique.</p><a href="#" class="btn">Read more</a>
-                </figcaption>
-              </figure>
-              <figure class="grid_3 figure2"><img src="images/page-3_img04.jpg" alt="">
-                <figcaption>
-                  <h5 data-equal-group="1">Aenean nonum</h5><br>
-                  <p class="txt1">Fusce feugiat malesuada odio. Morbi nunc odio, gravida at cursus lorem. Maecenas tristique.</p><a href="#" class="btn">Read more</a>
+                  <h5 data-equal-group="1">VENTA DE GRÚA</h5><br>
+                  <p class="txt1">Fusce feugiat malesuada odio. Morbi nunc odio, gravida at cursus lorem. Maecenas tristique.</p>
                 </figcaption>
               </figure>
             </div>
@@ -106,68 +94,7 @@
             <p class="txt1">Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend, elit. Aenean auctor wisi et urna. Aliquam erat volutpat. Duis ac turpis. Integer rutrum ante eu lacus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem.</p><a href="#" class="btn">Get now</a>
           </div>
         </section>
-        <section class="well bg-color">
-          <div class="container">
-            <h2 class="center">Special offers</h2>
-            <ul class="row product-list3">
-              <li data-equal-group="2" class="grid_4">
-                <h6>Aenean nonummy hendrerit mauris. Phasellus porta suscipit</h6>
-                <p class="txt1">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Read more</a>
-              </li>
-              <li data-equal-group="2" class="grid_4">
-                <h6>Donec accumsan malesuada orci. Donec sit amet eros  ipsum</h6>
-                <p class="txt1">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Read more</a>
-              </li>
-              <li data-equal-group="2" class="grid_4">
-                <h6>Sed laoreet aliquam leo. Ut tellus dolor dapibus eget elemen</h6>
-                <p class="txt1">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Read more</a>
-              </li>
-            </ul>
-          </div>
-        </section>
-        <section class="well center">
-          <div class="container">
-            <h2>Additional Servicios</h2>
-            <ul class="row product-list">
-              <li class="grid_2">
-                <div class="icon fl-glypho-document6"></div>
-                <h5>Dapibus ege</h5>
-                <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit</p>
-              </li>
-              <li class="grid_2">
-                <div class="icon fl-glypho-layers"></div>
-                <h5>Nteger rutr</h5>
-                <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit</p>
-              </li>
-              <li class="grid_2">
-                <div class="icon fl-glypho-light-bulb4"></div>
-                <h5>Elementum vel</h5>
-                <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit</p>
-              </li>
-              <li class="grid_2">
-                <div class="icon fl-glypho-inbox39"></div>
-                <h5>Fusce suscipit</h5>
-                <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit</p>
-              </li>
-              <li class="grid_2">
-                <div class="icon fl-glypho-flag97"></div>
-                <h5>Morbi nunc</h5>
-                <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit</p>
-              </li>
-              <li class="grid_2">
-                <div class="icon fl-glypho-chronometer"></div>
-                <h5>Cursus nec</h5>
-                <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit</p>
-              </li>
-            </ul>
-          </div>
-        </section>
       </main>
-      <!--
-      ========================================================
-                                  FOOTER
-      ========================================================
-      -->
       <footer>
         <section class="well1 ins1 mobile-center">
           <div class="container">
@@ -219,7 +146,7 @@
                 <ul>
                   <li><a href="#" class="fa-google-plus"><span>Google+</span></a></li>
                   <li><a href="#" class="fa-twitter"><span>Twitter</span></a></li>
-                  <li><a href="#" class="fa-facebook"><span>Facebook</span></a></li>
+                  <li><a href="https://www.facebook.com/maquinaria.jmcpris/"  class="fa-facebook"><span>Facebook</span></a></li>
                 </ul>
               </div>
               <div class="grid_3">
