--- a/index-4.html
+++ b/index-4.html
@@ -56,38 +56,33 @@
                 </li>
                 <li><a href="index-3.html">Productos</a>
                 </li>
-                <li class="active"><a href="index-4.html">Ubicación</a>
+                <li class="active"><a href="index-4.html">Contacto</a>
                 </li>
               </ul>
             </nav>
           </div>
         </div>
       </header>
-      <!--
-      ========================================================
-      							CONTENT
-      ========================================================
-      -->
       <main>
         <section class="well bg-color">
           <div class="container">
-            <h2 class="center">Get in touch</h2>
+            <h2 class="center">Contacto</h2>
             <form id="contact-form" class="contact-form">
               <div class="contact-form-loader"></div>
               <fieldset class="row">
                 <label class="name grid_4">
-                  <input type="text" name="name" placeholder="name*" value="" data-constraints="@Required @JustLetters"><span class="empty-message">*This field is required.</span><span class="error-message">*This is not a valid name.</span>
+                  <input style="background-color: white;" type="text" name="name" placeholder="Nombre*" value="" data-constraints="@Required @JustLetters"><span class="empty-message">*This field is required.</span><span class="error-message">*This is not a valid name.</span>
                 </label>
                 <label class="email grid_4">
-                  <input type="text" name="email" placeholder="e-mail*" value="" data-constraints="@Required @Email"><span class="empty-message">*This field is required.</span><span class="error-message">*This is not a valid email.</span>
+                  <input style="background-color: white;" type="text" name="email" placeholder="Correo*" value="" data-constraints="@Required @Email"><span class="empty-message">*This field is required.</span><span class="error-message">*This is not a valid email.</span>
                 </label>
                 <label class="phone grid_4">
-                  <input type="text" name="phone" placeholder="phone*" value="" data-constraints="@JustNumbers"><span class="empty-message">*This field is required.</span><span class="error-message">*This is not a valid phone.</span>
+                  <input style="background-color: white;" type="text" name="phone" placeholder="Teléfono" value="" data-constraints="@JustNumbers"><span class="empty-message">*This field is required.</span><span class="error-message">*This is not a valid phone.</span>
                 </label>
                 <label class="message grid_12">
-                  <textarea name="message" placeholder="message*" data-constraints="@Required @Length(min=20,max=999999)"></textarea><span class="empty-message">*This field is required.</span><span class="error-message">*The message is too short.</span>
+                  <textarea style="background-color: white;" name="message" placeholder="Mensaje*" data-constraints="@Required @Length(min=20,max=999999)"></textarea><span class="empty-message">*This field is required.</span><span class="error-message">*The message is too short.</span>
                 </label>
-                <div class="btn-wr grid_12"><a href="#" data-type="submit" class="btn">Send message</a></div>
+                <div class="btn-wr grid_12"><a href="#" data-type="submit" class="btn">Enviar</a></div>
               </fieldset>
               <div class="modal fade response-message">
                 <div class="modal-dialog">
@@ -163,7 +158,7 @@
                 <ul>
                   <li><a href="#" class="fa-google-plus"><span>Google+</span></a></li>
                   <li><a href="#" class="fa-twitter"><span>Twitter</span></a></li>
-                  <li><a href="#" class="fa-facebook"><span>Facebook</span></a></li>
+                  <li><a href="https://www.facebook.com/maquinaria.jmcpris/" class="fa-facebook"><span>Facebook</span></a></li>
                 </ul>
               </div>
               <div class="grid_3">
