--- a/index-5.html
+++ b/index-5.html
@@ -43,7 +43,7 @@
                 </li>
                 <li><a href="index-3.html">Productos</a>
                 </li>
-                <li><a href="index-4.html">Ubicación</a>
+                <li><a href="index-4.html">Contacto</a>
                 </li>
               </ul>
             </nav>
@@ -132,7 +132,7 @@
                 <ul>
                   <li><a href="#" class="fa-google-plus"><span>Google+</span></a></li>
                   <li><a href="#" class="fa-twitter"><span>Twitter</span></a></li>
-                  <li><a href="#" class="fa-facebook"><span>Facebook</span></a></li>
+                  <li><a href="https://www.facebook.com/maquinaria.jmcpris/" class="fa-facebook"><span>Facebook</span></a></li>
                 </ul>
               </div>
               <div class="grid_3">
