--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </li>
                 <li><a href="index-3.html">Productos</a>
                 </li>
-                <li><a href="index-4.html">Ubicación</a>
+                <li><a href="index-4.html">Contacto</a>
                 </li>
               </ul>
             </nav>
@@ -166,19 +166,19 @@
             <div class="banner_wr">
               <ul class="banner">
                 <li>
-                  <h3>Bienvenido</h3>
+                  <h3 class="presentacion">Bienvenido</h3>
                   <h6>Lorem ipsum dolor sit amet conse ctetur adipisicing elit.</h6>
-                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Read more</a>
+                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Read more</a><br><br>
                 </li>
                 <li>
-                  <h3>Productos</h3>
+                  <h3 class="presentacion">Productos</h3>
                   <h6>Lorem ipsum dolor sit amet conse ctetur adipisicing elit.</h6>
-                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Read more</a>
+                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Read more</a><br><br>
                 </li>
                 <li>
-                  <h3>Ubicación</h3>
+                  <h3 class="presentacion">Ubicación</h3>
                   <h6>Lorem ipsum dolor sit amet conse ctetur adipisicing elit.</h6>
-                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Read more</a>
+                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Read more</a><br><br>
                 </li>
               </ul>
             </div>
@@ -221,23 +221,6 @@
             </ul>
           </div>
         </section>
-        <section class="well1 center">
-          <div class="container">
-            <h2>Extracting building materials</h2>
-            <div class="row off1">
-              <div class="grid_3"><a href="#" class="img"><img src="images/page-1_img01.jpg" alt=""><span>Lorem ipsum dolor sit</span></a></div>
-              <div class="grid_3"><a href="#" class="img"><img src="images/page-1_img02.jpg" alt=""><span>Lorem ipsum dolor sit</span></a></div>
-              <div class="grid_3"><a href="#" class="img"><img src="images/page-1_img03.jpg" alt=""><span>Lorem ipsum dolor sit</span></a></div>
-              <div class="grid_3"><a href="#" class="img"><img src="images/page-1_img04.jpg" alt=""><span>Lorem ipsum dolor sit</span></a></div>
-            </div>
-            <div class="row off2">
-              <div class="grid_3"><a href="#" class="img"><img src="images/page-1_img05.jpg" alt=""><span>Lorem ipsum dolor sit</span></a></div>
-              <div class="grid_3"><a href="#" class="img"><img src="images/page-1_img06.jpg" alt=""><span>Lorem ipsum dolor sit</span></a></div>
-              <div class="grid_3"><a href="#" class="img"><img src="images/page-1_img07.jpg" alt=""><span>Lorem ipsum dolor sit</span></a></div>
-              <div class="grid_3"><a href="#" class="img"><img src="images/page-1_img08.jpg" alt=""><span>Lorem ipsum dolor sit</span></a></div>
-            </div><a href="#" class="btn">See all</a>
-          </div>
-        </section>
         <section data-mobile="true" class="well2 mobile-center parallax" style="background-image: url(images/parallax1.jpg);">
           <div class="container">
             <h2 class="center">They say</h2>
@@ -265,7 +248,7 @@
         </section>
         <section class="well1 center">
           <div class="container">
-            <h2>Our clients</h2>
+            <h2>Nuestros Clientes</h2>
             <ul class="row off1 list">
               <li class="grid_3"><a href="#"><img src="images/page-1_img12.jpg" alt=""></a></li>
               <li class="grid_3"><a href="#"><img src="images/page-1_img12.jpg" alt=""></a></li>
@@ -330,7 +313,7 @@
                 <ul>
                   <li><a href="#" class="fa-google-plus"><span>Google+</span></a></li>
                   <li><a href="#" class="fa-twitter"><span>Twitter</span></a></li>
-                  <li><a href="#" class="fa-facebook"><span>Facebook</span></a></li>
+                  <li><a href="https://www.facebook.com/maquinaria.jmcpris/" class="fa-facebook"><span>Facebook</span></a></li>
                 </ul>
               </div>
               <div class="grid_3">
